profilelist1exp/unpackaged/objects/LOT_OCEAN_Email__c.object
<CustomObject>
    <fields>
        <fullName>Country_APJ_Commercial__c</fullName>
        <label>Country APJ Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_Channel_Commercial__c</fullName>
        <label>Country Channel Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_Consumer_Retail__c</fullName>
        <label>Country Consumer Retail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_EMEA_Commercial__c</fullName>
        <label>Country EMEA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_Global_Commercial__c</fullName>
        <label>Country Global Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_LA_Commercial__c</fullName>
        <label>Country LA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_LE__c</fullName>
        <label>Country LE</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_NA_Commercial__c</fullName>
        <label>Country NA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_PUB__c</fullName>
        <label>Country PUB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_SMB__c</fullName>
        <label>Country SMB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>LOT_Region__c</referenceTo>
        <relationshipLabel>LOT OCEAN Emails</relationshipLabel>
        <relationshipName>LOT_OCEAN_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_APJ_Commercial__c</fullName>
        <label>Region APJ Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_Channel_Commercial__c</fullName>
        <label>Region Channel Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_Consumer_Retail__c</fullName>
        <label>Region Consumer Retail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_EMEA_Commercial__c</fullName>
        <label>Region EMEA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_Email_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region Email Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Global_Commercial__c</fullName>
        <label>Region Global Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_LA_Commercial__c</fullName>
        <label>Region LA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_LE__c</fullName>
        <label>Region LE</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_NA_Commercial__c</fullName>
        <label>Region NA Commercial</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_PUB__c</fullName>
        <label>Region PUB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_SMB__c</fullName>
        <label>Region SMB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EC-EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LOT OCEAN Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Country_Consumer_Retail__c</columns>
        <columns>Country_LE__c</columns>
        <columns>Country_PUB__c</columns>
        <columns>Country_SMB__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Consumer_Retail__c</columns>
        <columns>Region_Email_Identifier__c</columns>
        <columns>Region_LE__c</columns>
        <columns>Region_PUB__c</columns>
        <columns>Region_SMB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOE-{0000000000}</displayFormat>
        <label>LOT OCEAN Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOT OCEAN Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>